--- a/style.css
+++ b/style.css
@@ -27,27 +27,45 @@ h1 {
 
 /* Estilos para las secciones */
 .section {
-    margin-bottom: 40px;
+    margin-bottom: 5px;
 }
 
 /* Combo de Selección de Archivo CSV y Modelo */
 .file-selector {
     margin-bottom: 15px;
+    display: flex;  /* Alinea los elementos en una fila */
+    align-items: center;  /* Alineación vertical centrada */
 }
 
 .file-selector label {
-    display: block;
     font-weight: bold;
-    margin-bottom: 8px;
+    margin-right: 10px; 
 }
 
 select {
-    width: 100%;
+    width: 200px;
     padding: 8px;
     font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
+    margin-right: 10px;
+}
+
+
+/* Botón para abrir CSV */
+#openCSVButton {
+    padding: 8px 12px;
+    font-size: 1rem;
+    border: 1px solid #2980b9;
+    background-color: #2980b9;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#openCSVButton:hover {
+    background-color: #3498db;
 }
 
 /* Visualización de la Cuadrícula CSV */
@@ -63,9 +81,10 @@ select {
 }
 
 .csv-grid th, .csv-grid td {
-    padding: 8px;
+    padding: 4px;  /* Reduce el padding */
     text-align: center;
     border: 1px solid #ddd;
+    font-size: 12px;  /* Reduce el tamaño de la fuente */
 }
 
 .csv-grid th {
@@ -73,19 +92,19 @@ select {
     color: white;
 }
 
+
 /* Divisiones para la segunda parte (Predicción y Gráfico) */
 .prediction-column, .chart-column {
     width: 48%;
     float: left;
-    padding: 10px;
 }
 
 .input-section {
-    margin-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 .input-section input, .input-section button {
-    padding: 10px;
+    padding: 5px;
     width: 100%;
     margin-top: 10px;
     font-size: 1rem;
