--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ select {
 
 
 /* Botón para abrir CSV */
-#openCSVButton {
+button {
     padding: 8px 12px;
     font-size: 1rem;
     border: 1px solid #2980b9;
@@ -62,10 +62,19 @@ select {
     color: white;
     border-radius: 5px;
     cursor: pointer;
+    margin-right: 10px;
 }
 
-#openCSVButton:hover {
+button:hover {
     background-color: #3498db;
+}
+
+/* Estilo para el botón desactivado */
+button:disabled {
+    background-color: #b0c4de; /* Color de fondo gris claro */
+    color: #a9a9a9; /* Color de texto gris */
+    border: 1px solid #dcdcdc; /* Borde gris claro */
+    cursor: not-allowed; /* Cambiar el cursor para indicar que está desactivado */
 }
 
 /* Visualización de la Cuadrícula CSV */
@@ -101,9 +110,10 @@ select {
 
 .input-section {
     margin-bottom: 5px;
+    width: 100%;
 }
 
-.input-section input, .input-section button {
+.input-section input {
     padding: 5px;
     width: 100%;
     margin-top: 10px;
@@ -111,16 +121,14 @@ select {
     border-radius: 5px;
 }
 
-.input-section button {
-    background-color: #2980b9;
-    color: white;
-    border: none;
-    cursor: pointer;
+.input-section select {
+    padding: 5px;
+    width: 100%;
+    margin-top: 10px;
+    font-size: 1rem;
+    border-radius: 5px;
 }
 
-.input-section button:hover {
-    background-color: #3498db;
-}
 
 .output-section {
     margin-top: 20px;
@@ -146,5 +154,6 @@ textarea {
 /* Chart Style */
 #chart_div {
     width: 100%;
-    height: 400px;
+    height: 100%;
+    border-collapse: collapse;
 }
